--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "electron-quick-start",
+  "name": "hexatron",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Electron dashboard with six (or any amount of) isolated browser views in a grid tile layout.",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/martin-braun/hexatron",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "martin-braun",
+  "license": "MIT",
   "devDependencies": {
     "electron": "^29.0.0"
   }
