--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Electron dashboard with six (or any amount of) isolated browser views in a grid tile layout.",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "webpack --mode production"
   },
   "repository": "https://github.com/martin-braun/hexatron",
   "keywords": [],
